[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Display/Text.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Display/Menu/ModifierUI.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Display/Menu/ModifierPopupPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Display/Menu/ModifierGridContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Display/Menu/ModifierMultiplierText.gd" type="Script" id=6]

[node name="ModifierUI" type="Control"]
script = ExtResource( 2 )

[node name="ModifierMultiplierText" parent="." instance=ExtResource( 1 )]
margin_left = -240.0
margin_top = 80.0
margin_right = -64.0
margin_bottom = 96.0
bbcode_text = "Modifier bonus: +0x"
text = "Modifier bonus: +0x"
script = ExtResource( 6 )

[node name="ModifierGridContainer" parent="." instance=ExtResource( 4 )]
margin_top = 96.0
margin_bottom = 136.0

[node name="ModifierPopupPanel" parent="." instance=ExtResource( 3 )]
margin_left = 8.0
margin_top = -8.0
margin_right = 240.0
margin_bottom = 88.0

[connection signal="modifier_mouse_enter" from="ModifierGridContainer" to="." method="_on_ModifierGridContainer_modifier_mouse_enter"]
[connection signal="modifier_mouse_exit" from="ModifierGridContainer" to="." method="_on_ModifierGridContainer_modifier_mouse_exit"]
